  - static layout uses entire browser width and is CSS based
  - dynamic layout uses jQuery Layout plugin and supports closing,
    resizing, fixed header/footer, separate scrolling left/right, etc
- popup menus are in the header to save space and for easier layout
- set action inside form field sub-elements and widget-template-include for
  parameterized widget-template definitions

Bug Fixes:

- Fixed extraneous close script tags in screen/form HTML output
- Fixed right/east container-panel field name so size, etc settings apply
- Fixed calls to startFormListRow that were missing new parameters added
  to the method; resolves SourceForce Bug #39
- Fixed issue with a form-list with header form in a dynamic-container; now
  updates within the containing div using the results of the form submit
- Fixed issue with service name comparison when running SECA rules
- Auto reverse relationships better support titles
- DataDocument no longer includes null fields, empty Maps and Lists
- Fixed issue with null oldStatusId and setting new statusChanged automatic
  fields in entity-auto service implementation
- Fixed entity-find.search-form-inputs.@input-fields-map attribute, groovy
  generated left out quotes
- Fixed NPE in EntityUserField code
- Changed searchFormInputs to default to equals instead of contains; more
  efficient queries and works for numbers, dates, etc

===========================================================================
Release 1.3.0 - 27 July 2013
===========================================================================

Moqui Framework 1.3.0 is a major new feature and bug fix release. The major
new features include the EntityFacade Data Document, Data Feed, and Data
Search (based on ElasticSearch) features, the User Notification Message
feature, and various improvements to XML Screens and Forms. This release is
backward compatible with Moqui Framework release 1.2.0 with the exception
that the StatusValidChange entity is deprecated by the new